# python-esn

./: LICENSE  README.md  pyproject.toml
src/: esn.py  logistic.py  sinusoid.py
